# Langchain

./: .gitignore  pyproject.toml  requirements.txt
1-LangchainBasics/: QA_chatbot.py  langchainbasics.ipynb  note.txt  tools.ipynb
LangchainBasics/: langchainbasics.ipynb
